--- a/ui/index.templ
+++ b/ui/index.templ
@@ -10,12 +10,13 @@ templ Index() {
 			// htmx deps
 			<script src="static/htmx.min.js" type="text/javascript"></script>
 			// tailwind deps (to be replaced with postcss)
-			<script src="static/main.css"></script>
+			<link rel="stylesheet" href="static/main.css"/>
 			// alpine deps
-			<script src="static/alpinejs.min.js" type="text/javascript"></script>
+			<script defer src="static/alpinejs.min.js" type="text/javascript"></script>
 			<style>[x-cloak]{display:none}</style>
 		</head>
 		<body>
+			{! Nav() }
 			<div class="container flex justify-center items-center h-screen">
 				<button
  					hx-get="/toast"
